--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@
     <!-- Start Main -->
     <main>
         <section id="wrapper" class="contact-background"
-            style="background-image: url('./assets/images/backgroundd.webp');">
+            style="background-image: url('./assets/images/bg-breadcrumb.jpg');">
             <div class="container page_text">
                 <h1>Contact us</h1>
                 <ul>
@@ -159,6 +159,17 @@
                     </li>
                 </ul>
             </div>
+        </section>
+        <section id="map">
+            <div class="container">
+                <div class="map-cart">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24313.215380891517!2d49.86191205!3d40.3833254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2saz!4v1678084299482!5m2!1sen!2saz"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+
         </section>
         <section id="contact">
             <div class="container">
@@ -198,18 +209,9 @@
                     </div>
                 </div>
             </div>
-   <section id="map">
-    <div class="container">
-           <div class="map-cart">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24313.215380891517!2d49.86191205!3d40.3833254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2saz!4v1678084299482!5m2!1sen!2saz"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-    </div>
-       
-   </section>
-        </main>
+        </section>
+
+    </main>
     <!-- End Main -->
     <!-- Start Footer -->
     <footer>
