--- a/home.html
+++ b/home.html
@@ -53,7 +53,8 @@
                     </div>
                     <div class="col-4  d-lg-block d-none">
                         <div class="right-area">
-                            <div class="search"><i class="fa-solid fa-magnifying-glass icon" data-bs-toggle="modal"   data-bs-target="#exampleModal"></i></div>
+                            <div class="search"><i class="fa-solid fa-magnifying-glass icon" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal"></i></div>
                             <div><i class="fa-regular fa-user icon user-icon"></i></div>
                             <span class="count-wishlist">0</span>
                             <div><a href="wishlist.html"><i class="fa-regular fa-heart icon"></i></a></div>
@@ -68,7 +69,7 @@
 
                             </ul>
                         </div>
-                  
+
 
                         <!-- Modal -->
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -76,14 +77,15 @@
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Search</h1><img src="./assets/images/search-icon.png">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Search</h1><img
+                                            src="./assets/images/search-icon.png">
                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                    <form>
-                                        <input type="text">
-                                    </form>
+                                        <form>
+                                            <input type="text">
+                                        </form>
                                     </div>
                                 </div>
                             </div>
@@ -120,9 +122,38 @@
                     </div>
                     <div class="col-md-10 col-10 d-lg-none">
                         <div class="right-area">
-                            <div class="search"><i class="fa-solid fa-magnifying-glass icon" data-bs-toggle="modal"   data-bs-target="#exampleModal"></i></div>
-                            <div><i class="fa-regular fa-user icon"></i></div>
-                            <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
+                            <div class="search responsive-icon"><i class="fa-solid fa-magnifying-glass icon"
+                                    data-bs-toggle="modal" data-bs-target="#exampleModal-responsive"></i></div>
+                            <div class="responsive-icon"><i class="fa-regular fa-user icon user-icon-responsive"></i>
+                            </div>
+                            <span class="count-wishlist">0</span>
+                            <div clas="responsive-icon"><a href="wishlist.html"><i
+                                        class="fa-regular fa-heart heart-icon"></i></a></div>
+                            <span class="count-basket">0</span>
+                            <div class="basket responsive-icon"><a href="basket.html"><i
+                                        class="fa-solid fa-basket-shopping"></i></a>
+                            </div>
+                        </div>
+                        <div class="login-register-responsive d-none">
+                            <ul>
+                                <li><a href="login.html">Login</a></li><span>/</span>
+                                <li><a href="register.html">Register</a></li>
+
+                            </ul>
+                        </div>
+                        <!-- Modal -->
+                        <div class="modal responsive-modal fade" id="exampleModal-responsive" tabindex="-1"
+                            aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <form>
+                                            <input type="text" placeholder="Search...">
+                                        </form>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -143,7 +174,9 @@
                     </ul>
                     <div class="right-area d-none">
                         <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
+                        <span class="count-wishlist">0</span>
                         <div><a href="wishlist.html"><i class="fa-regular fa-heart icon"></i></a></div>
+                        <span class="count-basket">0</span>
                         <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
                         </div>
                     </div>
@@ -545,22 +578,22 @@
         <section id="brides">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3 col-sm-6 col-6 col-md-6">
+                    <div class="col-lg-3 col-sm-6 col-md-6">
                         <div class="bride-img col-lg-block">
                             <img src="./assets/images/bride1.jfif">
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6 col-6 col-md-6">
+                    <div class="col-lg-3 col-sm-6 col-md-6">
                         <div class="bride-img">
                             <img src="./assets/images/bride2.jfif">
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6 col-6 col-md-6">
+                    <div class="col-lg-3 col-sm-6 col-md-6">
                         <div class="bride-img">
                             <img src="./assets/images/bride3.jpeg">
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6 col-6 col-md-6">
+                    <div class="col-lg-3 col-sm-6 col-md-6">
                         <div class="bride-img">
                             <img src="./assets/images/bride4.jfif">
                         </div>
@@ -866,28 +899,28 @@
         <section id="footer-top">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3 col-sm-12 col-12">
+                    <div class="col-lg-3 col-sm-12 col-12 col-md-3">
                         <div class="service-item">
                             <img src="./assets/images/service-1.png">
                             <span class="title">Free Shipping </span>
                             <p>Once receiving your order, we will turn your products around in 3-5 business days.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-12 col-12">
+                    <div class="col-lg-3 col-sm-12 col-12 col-md-3">
                         <div class="service-item">
                             <img src="./assets/images/service-2.png">
                             <span class="title">Free Shipping </span>
                             <p>We accept returns for freshly purchased products within 7 days from the payment.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-12 col-12">
+                    <div class="col-lg-3 col-sm-12 col-12 col-md-3">
                         <div class="service-item">
                             <img src="./assets/images/service-3.png">
                             <span class="title">Custom Sizing</span>
                             <p>Order your dress with free custom sizing.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-12 col-12">
+                    <div class="col-lg-3 col-sm-12 col-12 col-md-3">
                         <div class="service-item">
                             <img src="./assets/images/service-4.png">
                             <span class="title">Superb Quality</span>
@@ -897,7 +930,7 @@
                 </div>
             </div>
         </section>
- 
+
 
     </main>
     <!-- End Main -->
