--- a/login.html
+++ b/login.html
@@ -108,7 +108,7 @@
                     </div>
                     <div class="col-md-10 col-10 d-lg-none">
                         <div class="right-area">
-                            <div class="search"><i class="fa-solid fa-magnifying-glass icon" data-bs-toggle="modal"   data-bs-target="#exampleModal"></i></div>
+                            <div class="search"><i class="fa-solid fa-magnifying-glass glass-icon" data-bs-toggle="modal" data-bs-target="#exampleModal"></i></div>
                             <div><i class="fa-regular fa-user icon"></i></div>
                             <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
                             </div>
@@ -164,7 +164,7 @@
                 <input type="text" class="input-text">
                 <label for="password">Password<span class="required">*</span></label>
                 <div class="area-password">
-                    <input type="password" class="password"><i class="fa-regular fa-eye"></i>
+                    <input type="password" class="password"><i class="fa-regular fa-eye eyes"></i>
                 </div>
                 <button type="submit">Log in</button>
                 <div class="login-bottom">
@@ -274,6 +274,8 @@
         integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./assets/js/common.js"></script>
+    <script src="./assets/js/login.js"></script>
+
 </body>
 
 </html>
