--- a/register.html
+++ b/register.html
@@ -168,11 +168,11 @@
                     <label for="password">Password<span class="required">*</span></label>
                 </div>
                 <div class="area-password">
-                     <input type="password" class="password"><i class="fa-regular fa-eye"></i>
+                     <input type="password" class="password"><i class="fa-regular fa-eye eyes"></i>
                 </div>
                 <label for="password">Confirm Password<span class="required">*</span></label>
-                <div class="area-password">
-                <input type="password" class="password"><i class="fa-regular fa-eye"></i>
+                <div class="area-password confirm-password">
+                <input type="password" class="password"><i class="fa-regular fa-eye eyes"></i>
             </div>
                 <button type="submit">Log in</button>
 
@@ -278,6 +278,7 @@
         integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./assets/js/common.js"></script>
+    <script src="./assets/js/register.js"></script>
 </body>
 
 </html>
