--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-12 col-md-12 col-12">
                         <div class="logo">
-                            <a href="home.html"><img src="./assets/images/Logo.svg" alt=""></a>
+                            <a href=""><img src="./assets/images/Logo.svg" alt=""></a>
                         </div>
                     </div>
                     <div class="col-4  d-lg-block d-none">
@@ -64,6 +64,7 @@
 
                             </ul>
                         </div>
+
 
                         <!-- Modal -->
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -122,7 +123,7 @@
                             </div>
                             <span class="count-wishlist">0</span>
                             <div clas="responsive-icon"><a href="wishlist.html"><i
-                                        class="fa-regular fa-heart icon heart-icon"></i></a></div>
+                                        class="fa-regular fa-heart heart-icon"></i></a></div>
                             <span class="count-basket">0</span>
                             <div class="basket responsive-icon"><a href="basket.html"><i
                                         class="fa-solid fa-basket-shopping"></i></a>
@@ -168,10 +169,14 @@
                     </ul>
                     <div class="right-area d-none">
                         <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
+                        <span class="count-wishlist">0</span>
                         <div><a href="wishlist.html"><i class="fa-regular fa-heart icon"></i></a></div>
+                        <span class="count-basket">0</span>
                         <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
                         </div>
                     </div>
+
+
 
                 </div>
             </div>
@@ -456,12 +461,13 @@
     </main>
     <!-- End Main -->
 
+
     <!-- Start Footer -->
     <footer>
         <section id="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-2 col-sm-12 col-12 col-md-3">
+                    <div class="col-lg-2 col-sm-12 col-12 col-md-2">
                         <div class="ApColumn ">
                             <div class="block ApLink ApBlockLink">
                                 <ul>
@@ -498,7 +504,7 @@
                             <img src="./assets/images/Logo.svg">
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-12 col-12 col-md-3">
+                    <div class="col-lg-4 col-sm-12 col-12 col-md-4">
                         <div class="block-information">
                             <h4 class="title_block">Showroom</h4>
                             <p>Box 565, Charlestown, Nevis, West Indies,Caribbean</p>
@@ -528,12 +534,13 @@
 
                     </div>
                 </div>
+
             </div>
         </section>
         <hr>
         <section id="footer-bottom">
             <div class="container">
-                <div class="block-copyright ApRawHtml ">
+                <div class="block-copyright ApRawHtml d-lg-block d-none">
                     Copyright © 2020 All Rights Reserved. <span>Bridey.</span> </div>
             </div>
         </section>
