--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,7 @@
                             </ul>
                         </div>
 
+
                         <!-- Modal -->
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                             aria-hidden="true">
@@ -111,10 +112,38 @@
                     </div>
                     <div class="col-md-10 col-10 d-lg-none">
                         <div class="right-area">
-                            <div class="search"><i class="fa-solid fa-magnifying-glass icon" data-bs-toggle="modal"
-                                    data-bs-target="#exampleModal"></i></div>
-                            <div><i class="fa-regular fa-user icon"></i></div>
-                            <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
+                            <div class="search responsive-icon"><i class="fa-solid fa-magnifying-glass icon"
+                                    data-bs-toggle="modal" data-bs-target="#exampleModal-responsive"></i></div>
+                            <div class="responsive-icon"><i class="fa-regular fa-user icon user-icon-responsive"></i>
+                            </div>
+                            <span class="count-wishlist">0</span>
+                            <div clas="responsive-icon"><a href="wishlist.html"><i
+                                        class="fa-regular fa-heart heart-icon"></i></a></div>
+                            <span class="count-basket">0</span>
+                            <div class="basket responsive-icon"><a href="basket.html"><i
+                                        class="fa-solid fa-basket-shopping"></i></a>
+                            </div>
+                        </div>
+                        <div class="login-register-responsive d-none">
+                            <ul>
+                                <li><a href="login.html">Login</a></li><span>/</span>
+                                <li><a href="register.html">Register</a></li>
+
+                            </ul>
+                        </div>
+                        <!-- Modal -->
+                        <div class="modal responsive-modal fade" id="exampleModal-responsive" tabindex="-1"
+                            aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <form>
+                                            <input type="text" placeholder="Search...">
+                                        </form>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -135,19 +164,23 @@
                     </ul>
                     <div class="right-area d-none">
                         <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
+                        <span class="count-wishlist">0</span>
                         <div><a href="wishlist.html"><i class="fa-regular fa-heart icon"></i></a></div>
+                        <span class="count-basket">0</span>
                         <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
                         </div>
                     </div>
+
+
 
                 </div>
             </div>
         </section>
     </header>
-    <!-- End header -->
+    <!-- End Header -->
     <!-- Start Main -->
     <main>
-        <section id="wrapper" class="contact-background"
+        <section id="wrapper-contact" class="contact-background"
             style="background-image: url('./assets/images/bg-breadcrumb.jpg');">
             <div class="container page_text">
                 <h1>Contact us</h1>
@@ -173,9 +206,8 @@
         </section>
         <section id="contact">
             <div class="container">
-
                 <div class="row contact-area">
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-4 col-sm-12">
                         <div class="elementor-column-wrap">
                             <h2>Our store</h2>
                             <p>Box 565, Charlestown, Nevis, West
@@ -189,7 +221,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-9">
+                    <div class="col-lg-9 col-md-8 col-sm-12">
                         <div class="elementor-column">
                             <div class="elementor-widget-container">
                                 <form class="elementor-form">
@@ -210,92 +242,123 @@
                 </div>
             </div>
         </section>
-
-    </main>
-    <!-- End Main -->
-    <!-- Start Footer -->
-    <footer>
-        <section id="footer">
-            <hr>
+        <section id="footer-top-contact">
             <div class="container">
                 <div class="row">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-2 col-sm-12 col-12 col-md-6">
-                                <div class="ApColumn ">
-                                    <div class="block ApLink ApBlockLink">
-                                        <ul>
-                                            <li><a href="blog.html" target="_self">Blog </a></li>
-                                            <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/content/4-about-us"
-                                                    target="_self">About Us </a></li>
-                                            <li><a href="#" target="_self">Careers</a></li>
-                                            <li><a href="#" target="_self"> Partner</a></li>
-                                        </ul>
-                                    </div>
-
-                                </div>
-
-                            </div>
-                            <div class="col-lg-2 col-sm-12 col-12 col-md-6">
-                                <div class="ApColumn ">
-
-                                    <div class="block ApLink ApBlockLink">
-                                        <ul>
-                                            <li><a href="#" target="_self">Size chart</a></li>
-                                            <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/guest-tracking"
-                                                    target="_self"> Track order </a></li>
-                                            <li><a href="#" target="_self">Dress Guide </a></li>
-                                            <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/content/1-delivery"
-                                                    target="_self">Shipping </a></li>
-                                            <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/content/5-secure-payment"
-                                                    target="_self">Payment Methods</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-12 col-12 col-md-12">
-                                <div class="logo">
-                                    <img src="./assets/images/Logo.svg">
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-12 col-12 col-md-12">
-                                <div class="block-information">
-                                    <h4 class="title_block">Showroom</h4>
-                                    <p>Box 565, Charlestown, Nevis, West Indies,Caribbean</p>
-                                    <ul>
-                                        <li>Monday - Friday: <span>8am - 4pm </span></li>
-                                        <li>Saturday: <span>9am - 5pm</span></li>
-                                    </ul>
-                                </div>
-                                <div class="block-social">
-                                    <h6 class="title_block">
-                                        Follow us
-                                    </h6>
-                                    <ul>
-                                        <li class="facebook"><a href="#" title="Facebook" target="_blank"
-                                                rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
-                                        </li>
-                                        <li class="twitter"><a href="#" title="Twitter" target="_blank"
-                                                rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a></li>
-                                        <li class="pinterest"><a href="#" title="Pinterest" target="_blank"
-                                                rel="noopener noreferrer"><i class="fa-brands fa-pinterest"></i></a>
-                                        </li>
-                                        <li class="instagram"><a href="#" title="Instagram" target="_blank"
-                                                rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-
-                            </div>
+                    <div class="col-lg-3 col-sm-12 col-12 col-md-3">
+                        <div class="service-item">
+                            <img src="./assets/images/service-1.png">
+                            <span class="title">Free Shipping </span>
+                            <p>Once receiving your order, we will turn your products around in 3-5 business days.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-12 col-12 col-md-3">
+                        <div class="service-item">
+                            <img src="./assets/images/service-2.png">
+                            <span class="title">Free Shipping </span>
+                            <p>We accept returns for freshly purchased products within 7 days from the payment.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-12 col-12 col-md-3">
+                        <div class="service-item">
+                            <img src="./assets/images/service-3.png">
+                            <span class="title">Custom Sizing</span>
+                            <p>Order your dress with free custom sizing.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-12 col-12 col-md-3">
+                        <div class="service-item">
+                            <img src="./assets/images/service-4.png">
+                            <span class="title">Superb Quality</span>
+                            <p>We make commitments that the quality of our products will and always will be superb.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+    </main>
+    <!-- End Main -->
+
+  
+    <!-- Start Footer -->
+    <footer>
+        <section id="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-2 col-sm-12 col-12 col-md-2">
+                        <div class="ApColumn ">
+                            <div class="block ApLink ApBlockLink">
+                                <ul>
+                                    <li><a href="blog.html" target="_self">Blog </a></li>
+                                    <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/content/4-about-us"
+                                            target="_self">About Us </a></li>
+                                    <li><a href="#" target="_self">Careers</a></li>
+                                    <li><a href="#" target="_self"> Partner</a></li>
+                                </ul>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="col-lg-2 col-sm-12 col-12 col-md-3">
+                        <div class="ApColumn ">
+
+                            <div class="block ApLink ApBlockLink">
+                                <ul>
+                                    <li><a href="#" target="_self">Size chart</a></li>
+                                    <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/guest-tracking"
+                                            target="_self"> Track order </a></li>
+                                    <li><a href="#" target="_self">Dress Guide </a></li>
+                                    <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/content/1-delivery"
+                                            target="_self">Shipping </a></li>
+                                    <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/content/5-secure-payment"
+                                            target="_self">Payment Methods</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-12 col-12 col-md-3">
+                        <div class="logo">
+                            <img src="./assets/images/Logo.svg">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-12 col-12 col-md-4">
+                        <div class="block-information">
+                            <h4 class="title_block">Showroom</h4>
+                            <p>Box 565, Charlestown, Nevis, West Indies,Caribbean</p>
+                            <ul>
+                                <li>Monday - Friday: <span>8am - 4pm </span></li>
+                                <li>Saturday: <span>9am - 5pm</span></li>
+                            </ul>
+                        </div>
+                        <div class="block-social">
+                            <h6 class="title_block">
+                                Follow us
+                            </h6>
+                            <ul>
+                                <li class="facebook"><a href="#" title="Facebook" target="_blank"
+                                        rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
+                                </li>
+                                <li class="twitter"><a href="#" title="Twitter" target="_blank"
+                                        rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li class="pinterest"><a href="#" title="Pinterest" target="_blank"
+                                        rel="noopener noreferrer"><i class="fa-brands fa-pinterest"></i></a>
+                                </li>
+                                <li class="instagram"><a href="#" title="Instagram" target="_blank"
+                                        rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
         <hr>
         <section id="footer-bottom">
             <div class="container">
-                <div class="block-copyright ApRawHtml ">
+                <div class="block-copyright ApRawHtml d-lg-block d-none">
                     Copyright © 2020 All Rights Reserved. <span>Bridey.</span> </div>
             </div>
         </section>
