--- a/productDetail.html
+++ b/productDetail.html
@@ -418,93 +418,93 @@
         </section>
     </main>
     <!-- End Main -->
-    <!-- Start Footer -->
-    <footer>
-        <section id="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-2 col-sm-12 col-12 col-md-6">
-                                <div class="ApColumn ">
-                                    <div class="block ApLink ApBlockLink">
-                                        <ul>
-                                            <li><a href="blog.html" target="_self">Blog </a></li>
-                                            <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/content/4-about-us"
-                                                    target="_self">About Us </a></li>
-                                            <li><a href="#" target="_self">Careers</a></li>
-                                            <li><a href="#" target="_self"> Partner</a></li>
-                                        </ul>
-                                    </div>
 
-                                </div>
+ 
+   <!-- Start Footer -->
+   <footer>
+    <section id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2 col-sm-12 col-12 col-md-2">
+                    <div class="ApColumn ">
+                        <div class="block ApLink ApBlockLink">
+                            <ul>
+                                <li><a href="blog.html" target="_self">Blog </a></li>
+                                <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/content/4-about-us"
+                                        target="_self">About Us </a></li>
+                                <li><a href="#" target="_self">Careers</a></li>
+                                <li><a href="#" target="_self"> Partner</a></li>
+                            </ul>
+                        </div>
 
-                            </div>
-                            <div class="col-lg-2 col-sm-12 col-12 col-md-6">
-                                <div class="ApColumn ">
+                    </div>
 
-                                    <div class="block ApLink ApBlockLink">
-                                        <ul>
-                                            <li><a href="#" target="_self">Size chart</a></li>
-                                            <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/guest-tracking"
-                                                    target="_self"> Track order </a></li>
-                                            <li><a href="#" target="_self">Dress Guide </a></li>
-                                            <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/content/1-delivery"
-                                                    target="_self">Shipping </a></li>
-                                            <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/content/5-secure-payment"
-                                                    target="_self">Payment Methods</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-12 col-12 col-md-12">
-                                <div class="logo">
-                                    <img src="./assets/images/Logo.svg">
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-12 col-12 col-md-12">
-                                <div class="block-information">
-                                    <h4 class="title_block">Showroom</h4>
-                                    <p>Box 565, Charlestown, Nevis, West Indies,Caribbean</p>
-                                    <ul>
-                                        <li>Monday - Friday: <span>8am - 4pm </span></li>
-                                        <li>Saturday: <span>9am - 5pm</span></li>
-                                    </ul>
-                                </div>
-                                <div class="block-social">
-                                    <h6 class="title_block">
-                                        Follow us
-                                    </h6>
-                                    <ul>
-                                        <li class="facebook"><a href="#" title="Facebook" target="_blank"
-                                                rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
-                                        </li>
-                                        <li class="twitter"><a href="#" title="Twitter" target="_blank"
-                                                rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a></li>
-                                        <li class="pinterest"><a href="#" title="Pinterest" target="_blank"
-                                                rel="noopener noreferrer"><i class="fa-brands fa-pinterest"></i></a>
-                                        </li>
-                                        <li class="instagram"><a href="#" title="Instagram" target="_blank"
-                                                rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
+                </div>
+                <div class="col-lg-2 col-sm-12 col-12 col-md-3">
+                    <div class="ApColumn ">
 
-                            </div>
+                        <div class="block ApLink ApBlockLink">
+                            <ul>
+                                <li><a href="#" target="_self">Size chart</a></li>
+                                <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/guest-tracking"
+                                        target="_self"> Track order </a></li>
+                                <li><a href="#" target="_self">Dress Guide </a></li>
+                                <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/content/1-delivery"
+                                        target="_self">Shipping </a></li>
+                                <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/content/5-secure-payment"
+                                        target="_self">Payment Methods</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-4 col-sm-12 col-12 col-md-3">
+                    <div class="logo">
+                        <img src="./assets/images/Logo.svg">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-12 col-12 col-md-4">
+                    <div class="block-information">
+                        <h4 class="title_block">Showroom</h4>
+                        <p>Box 565, Charlestown, Nevis, West Indies,Caribbean</p>
+                        <ul>
+                            <li>Monday - Friday: <span>8am - 4pm </span></li>
+                            <li>Saturday: <span>9am - 5pm</span></li>
+                        </ul>
+                    </div>
+                    <div class="block-social">
+                        <h6 class="title_block">
+                            Follow us
+                        </h6>
+                        <ul>
+                            <li class="facebook"><a href="#" title="Facebook" target="_blank"
+                                    rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
+                            </li>
+                            <li class="twitter"><a href="#" title="Twitter" target="_blank"
+                                    rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li class="pinterest"><a href="#" title="Pinterest" target="_blank"
+                                    rel="noopener noreferrer"><i class="fa-brands fa-pinterest"></i></a>
+                            </li>
+                            <li class="instagram"><a href="#" title="Instagram" target="_blank"
+                                    rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
             </div>
-        </section>
-        <hr>
-        <section id="footer-bottom">
-            <div class="container">
-                <div class="block-copyright ApRawHtml ">
-                    Copyright © 2020 All Rights Reserved. <span>Bridey.</span> </div>
-            </div>
-        </section>
-    </footer>
-    <!-- End Footer -->
+
+        </div>
+    </section>
+    <hr>
+    <section id="footer-bottom">
+        <div class="container">
+            <div class="block-copyright ApRawHtml d-lg-block d-none">
+                Copyright © 2020 All Rights Reserved. <span>Bridey.</span> </div>
+        </div>
+    </section>
+</footer>
+<!-- End Footer -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
