responsive is ready

--- a/blog.html
+++ b/blog.html
@@ -189,20 +189,6 @@
                 </ul>
             </div>
         </section>
-        <section id="search">
-            <div class="container">
-                <div class="search-area">
-                    <div class="widget-search">
-                        <h2 class="search-title">Search</h2>
-                    </div>
-                    <form class="wg-search-form">
-                        <input type="text" placeholder="Search...">
-                        <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                    </form>
-                </div>
-            </div>
-
-        </section>
         <section id="blogss">
             <div class="container">
                 <div class="row">
@@ -307,9 +293,17 @@
                         </div>
 
                     </div>
-                    <div class="col-lg-3  d-lg-block d-none">
+                    <div class="col-lg-3  col-sm-12 col-md-12">
                         <div class="right-side">
-
+                            <div class="search-area d-lg-block d-none">
+                                <div class="widget-search">
+                                    <h2 class="search-title">Search</h2>
+                                </div>
+                                <form class="wg-search-form">
+                                    <input type="text" placeholder="Search...">
+                                    <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                                </form>
+                            </div>
                             <div class="widget">
                                 <h2 class="widget-title">Categories</h2>
                             </div>
@@ -422,8 +416,6 @@
         </section>
     </main>
     <!-- End Main -->
-
-   
     <!-- Start Footer -->
     <footer>
         <section id="footer">
