--- a/home.html
+++ b/home.html
@@ -97,21 +97,11 @@
         <div class="side-bar">
             <div class="close"> <span>Close</span></div>
             <ul>
-                <a>
-                    <li class="activ">Home</li>
-                </a>
-                <a>
-                    <li>Shop</li>
-                </a>
-                <a>
-                    <li>About</li>
-                </a>
-                <a>
-                    <li>Blog</li>
-                </a>
-                <a>
-                    <li>Contact</li>
-                </a>
+                <li class="activ"><a>Home</a></li>
+                <li><a>Shop</a></li>
+                <li><a>About</a></li>
+                <li><a>Blog</a></li>
+                <li><a>Contact</a></li>
             </ul>
         </div>
         <section id="responsive-nav-area" class="d-lg-none">
@@ -1019,7 +1009,6 @@
         </section>
     </footer>
     <!-- End Footer -->
-
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
