--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.1/mdb.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -192,9 +191,11 @@
                 <ul>
                     <li>
                         <a href="home.html">
-                    <li>Home</li><i class="fa-solid fa-angle-right"></i></a>
-                    <li><span>About us</span></li>
+                            Home
+                            <i class="fa-solid fa-angle-right"></i>
+                        </a>
                     </li>
+                    <li><span>About us</span></li>
                 </ul>
             </div>
         </section>
